create 3 blocks with text

--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css?ver=1.0.0">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css?ver=1.0.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
   </head>
   <body>
+    <div class="features-container">
+        <div class="feature">
+            <div class="feature-title">Fast. Really fast.</div>
+            <p class="feature-text">
+                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+            </p>
+        </div>
+        
+        <div class="feature">
+            <div class="feature-title">More bang for buck.</div>
+            <p class="feature-text">
+                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+            </p>
+        </div>
+        
+        <div class="feature">
+            <div class="feature-title">Safe and secure.</div>
+            <p class="feature-text">
+                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+            </p>
+        </div>
+    </div>
   </body>
 </html>
