clean up and color the blocks

--- a/index.html
+++ b/index.html
@@ -9,26 +9,24 @@
   </head>
   <body>
     <div class="features-container">
-        <div class="feature">
-            <div class="feature-title">Fast. Really fast.</div>
-            <p class="feature-text">
-                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
-            </p>
+      <div class="feature1">
+        <div class="feature-title">Fast. Really fast.</div>
+          <p class="feature-text">
+          Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+          </p>
         </div>
-        
-        <div class="feature">
-            <div class="feature-title">More bang for buck.</div>
-            <p class="feature-text">
-                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
-            </p>
-        </div>
-        
-        <div class="feature">
-            <div class="feature-title">Safe and secure.</div>
-            <p class="feature-text">
-                Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
-            </p>
-        </div>
+      <div class="feature2">
+        <div class="feature-title">More bang for buck.</div>
+        <p class="feature-text">
+        Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+        </p>
+      </div>
+      <div class="feature3">
+        <div class="feature-title">Safe and secure.</div>
+        <p class="feature-text">
+        Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+        </p>
+      </div>
     </div>
   </body>
 </html>
