--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title></title>
   </head>
   <body>
-    <div class="features-container">
+    <div class="features-container1">
+      <div class="image">
+        <div class="image1">
+          <img src="img/1.png">
+        </div>
+        <div class="image2">
+          <img src="img/2.png">
+        </div>
+      </div>
+    </div>
+    
+    <div class="features-container2">
       <div class="feature1">
         <div class="feature-title">Fast. Really fast.</div>
           <p class="feature-text">
