--- a/index.html
+++ b/index.html
@@ -17,8 +17,27 @@
           <img src="img/2.png">
         </div>
       </div>
-    </div>
-    
+      <div>
+        <a href="HTML/Features.html" class="button1">Features</a>
+      </div>
+      <div>
+        <a href="HTML/Pricing.html" class="button1">Pricing</a>
+      </div>
+      <div>
+        <a href="HTML/Integrations.html" class="button1">Integrations</a>
+      </div>
+      <div>
+        <a href="HTML/Learn.html" class="button1">Learn</a>
+      </div>
+      <div>
+        <a href="HTML/Sign in.html" class="button2">Sign in</a>
+      </div>
+      <div class="box3">
+        <div>
+          <a href="HTML/Book a demo.html" class="button3">Book a demo</a>
+        </div>
+      </div>
+    </div>  
     <div class="features-container2">
       <div class="feature1">
         <div class="feature-title">Fast. Really fast.</div>
