--- a/index.html
+++ b/index.html
@@ -39,23 +39,47 @@
           <a href="HTML/Book a demo.html" class="button3">Book a demo</a>
         </div> 
       </div> 
-    </div>  
+    </div>
     <div class="features-container2">
-      <div class="feature1">
-        <div class="feature-title">Fast. Really fast.</div>
-          <p class="feature-text">
-          Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
-          </p>
+      <div class="feature">
+        <div class="feature-title1">Your everyday tasks, automated.</div>
+        <p class="feature-text1">
+        Whirl lets you design and streamline your everyday tasks and workflows in just a few clicks.
+        </p>
+        <div class="container3">
+          <div class="box3">
+            <a href="HTML/Book a demo.html" class="button3">Book a demo</a>
+          </div> 
+          <div class="container4">
+            <a href="HTML/Book a demo.html" class="button4">Learn more</a>
+            <div class="image3">
+              <img src="img/3.png"></img>
+            </div>
+          </div>
+        </div> 
+      </div>
+      <div class="feature4">
+        <div>
+          <img src="img/4.png"></img>
         </div>
+      </div>  
+    </div>
+    <div class="features-container3">
+      <div class="feature1">
+        <div class="feature-title2">Fast. Really fast.</div>
+        <p class="feature-text2">
+        Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
+        </p>
+      </div>
       <div class="feature2">
-        <div class="feature-title">More bang for buck.</div>
-        <p class="feature-text">
+        <div class="feature-title2">More bang for buck.</div>
+        <p class="feature-text2">
         Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
         </p>
       </div>
       <div class="feature3">
-        <div class="feature-title">Safe and secure.</div>
-        <p class="feature-text">
+        <div class="feature-title2">Safe and secure.</div>
+        <p class="feature-text2">
         Un extra air printer version, style method exacerbates adverse failure of all ships or co-commode consequat.
         </p>
       </div>
