--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </div> 
       </div>
       <div class="feature4">
-        <img src="img/4.png"></img>
+        
+          <img src="img/4.png" class="image4"> </img>
+        
       </div>  
     </div>
     <div class="features-container3">
