clean up & add content

--- a/index.html
+++ b/index.html
@@ -72,12 +72,37 @@
         </div> 
       </div>
       <div class="feature4">
-        
-          <img src="img/4.png" class="image4"> </img>
-        
+        <img src="img/4.png" class="image4"> </img>
       </div>  
     </div>
+    <div class="features-container">
+      <p class="feature-text">
+      Trusted by 50,000+ companies
+      </p>
+    </div>
     <div class="features-container3">
+      <div class="box1">
+        <a href="HTML/Раздел1.html">
+          <img src="img/5_1.png" class="image4"></img>
+        </a>
+      </div>
+      <div class="box1">
+        <a href="HTML/Раздел2.html">
+          <img src="img/5_2.png" class="image4"></img>
+        </a>
+      </div>
+      <div class="box1">
+        <a href="HTML/Раздел3.html">
+          <img src="img/5_3.png" class="image4"></img>
+        </a>
+      </div>
+      <div class="box1">
+        <a href="HTML/Раздел4.html">
+          <img src="img/5_4.png" class="image4"></img>
+        </a>
+      </div>
+    </div>
+    <div class="features-container4">
       <div class="feature1">
         <div class="feature-title2">Fast. Really fast.</div>
         <p class="feature-text2">
