--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css?ver=1.0.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      @media ( max-width: 384px ){
-        .features-container1 {
-          flex-direction: column;
-        }
-        .container1 {
-          display: flex;
-          margin: 3px 0 0 0;
-          flex-wrap: wrap;
-          gap: 10px;
-        }
-      }
-    </style>
-    <title></title>
+    <title>project Flex</title>
   </head>
   <body>
     <div class="features-container1">
