--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="box1">
         <a href="HTML/Раздел4.html">
-          <img src="img/5_4.png" class="image4"></img>
+          <img src="img/5_4.png" class="image4"/>
         </a>
       </div>
     </div>
